...
                time = "10:00",
                date = "20/10/2021"
            ),
            Ticket(
                movieName = "Inception",
                imageUrl = "https://upload.wikimedia.org/wikipedia/en/7/7f/Inception_ver3.jpg",
                seat = "A1, A2, A3",
                time = "15:30",
                date = "22/10/2021"
            ),
            Ticket(
                movieName = "Interstellar",
                imageUrl = "https://upload.wikimedia.org/wikipedia/en/b/bc/Interstellar_film_poster.jpg",
...
